# dbt-workshop

./: .envrc  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Dockerfile  README.md  dbt_project.yml  packages.yml  profiles_template.yml  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
macros/: cents_to_dollars.sql  unit_test_overrides.sql
models/: additional_data_copy.sql  additional_data_mapped.sql  enriched_table.sql  names_copy.sql  schema.yml  sources.yml
models/incremental/: orders_per_year.sql  raw_orders_copy.sql
models/sources/: sources.yml
models/staging/: staging.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
profiles/template/: profiles.yml
sample_data/: additional_data.csv  names.csv
seeds/: country_codes.csv
snapshots/: orders_snapshot.sql
tests/: assert_customers_id_not_null.sql
tests/unit_tests/: test_customers.sql
