[tool.poetry]
name = "dbt-workshop"
version = "0.1.0"
description = ""
authors = ["Matthias Niehoff <matthias.niehoff@codecentric.de>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.6"
dbt-postgres = "^1.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3"
sqlfluff = "^2.3"
sqlfluff-templater-dbt = "^2.3"
ruff = "^0.0.274"
elementary-data = "^0.10"
data-diff = {version = "^0.8", extras=["postgres"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
