[tool.poetry]
name = "dbt-workshop"
version = "0.1.0"
description = ""
authors = ["Matthias Niehoff <matthias.niehoff@codecentric.de>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
dbt-bigquery = "^1.6"
dbt-core = "^1.6.5"
dbt-postgres = "^1.6"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
data-diff = {version = "^0.8", extras=["postgres"]}
elementary-data = "^0.10"
pre-commit = "^3.3"
ruff = "^0.0.274"
sqlfluff = "^2.3"
sqlfluff-templater-dbt = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
